Main services and structure for admin modules

--- a/src/client/admin/modules/categories/components/categories/categories.component.html
+++ b/src/client/admin/modules/categories/components/categories/categories.component.html
@@ -11,6 +11,7 @@
             <button class="fl" type="submit">Save</button>
           </div>
         </form>
+        <div ng-for="let category of categories | async">{{category | json}}</div>
         <!--<div class="input-group cf" *ngFor="let cat of categories"><span class="fl">{{cat.name}}</span>
           <button class="fl" (click)="edit(cat)">Edit</button>
           <button class="fl" (click)="delete(cat)">Delete</button>
