--- a/src/client/admin/modules/users/components/user-list/user-list.component.html
+++ b/src/client/admin/modules/users/components/user-list/user-list.component.html
@@ -3,5 +3,6 @@
   <div class="content">
     <h1>Users</h1>
     <data-table></data-table>
+    <div *ngFor="let user of users | async">{{user | json}}</div>
   </div>
 </div>
