--- a/src/client/admin/modules/categories/components/categories/categories.component.html
+++ b/src/client/admin/modules/categories/components/categories/categories.component.html
@@ -5,17 +5,16 @@
     <h1>Categories</h1>
     <div class="main">
       <div class="categories">
-        <form #orderForm="ngForm">
+        <form #form="ngForm" (ngSubmit)="onSubmit(form)">
           <div class="input-group cf">
-            <input class="fl" type="text" required="required"/>
-            <button class="fl" type="submit">Save</button>
+            <input type="text" class="fl" name="name" [(ngModel)]="category.name" required="required"/>
+            <button type="submit" class="fl">Save</button>
           </div>
         </form>
-        <div ng-for="let category of categories | async">{{category | json}}</div>
-        <!--<div class="input-group cf" *ngFor="let cat of categories"><span class="fl">{{cat.name}}</span>
-          <button class="fl" (click)="edit(cat)">Edit</button>
-          <button class="fl" (click)="delete(cat)">Delete</button>
-        </div>-->
+        <div class="input-group cf" *ngFor="let cat of categories"><span class="fl">{{cat.name}}</span>
+          <!--<button class="fl" (click)="edit(cat)">Edit</button>-->
+          <button class="fl" (click)="onRemove(cat)">Delete</button>
+        </div>
       </div>
     </div>
   </div>
