--- a/src/client/assets/style.css
+++ b/src/client/assets/style.css
@@ -77,6 +77,9 @@ body {
 .content .content .main.order input[type="text"],
 .content .content .main.profile input[type="text"],
 .content .content .main.product input[type="text"],
+.content .content .main.order input[type="number"],
+.content .content .main.profile input[type="number"],
+.content .content .main.product input[type="number"],
 .content .content .main.order select,
 .content .content .main.profile select,
 .content .content .main.product select,
@@ -101,6 +104,9 @@ body {
 .content .content .main.order input[type="text"],
 .content .content .main.profile input[type="text"],
 .content .content .main.product input[type="text"],
+.content .content .main.order input[type="number"],
+.content .content .main.profile input[type="number"],
+.content .content .main.product input[type="number"],
 .content .content .main.order select,
 .content .content .main.profile select,
 .content .content .main.product select,
@@ -141,6 +147,9 @@ body {
 .content .content .main.order input[type="text"].ng-invalid.ng-dirty,
 .content .content .main.profile input[type="text"].ng-invalid.ng-dirty,
 .content .content .main.product input[type="text"].ng-invalid.ng-dirty,
+.content .content .main.order input[type="number"].ng-invalid.ng-dirty,
+.content .content .main.profile input[type="number"].ng-invalid.ng-dirty,
+.content .content .main.product input[type="number"].ng-invalid.ng-dirty,
 .content .content .main.order select.ng-invalid.ng-dirty,
 .content .content .main.profile select.ng-invalid.ng-dirty,
 .content .content .main.product select.ng-invalid.ng-dirty,
@@ -247,6 +256,9 @@ body {
 .content .content .main.order .col-2 input[type="text"],
 .content .content .main.profile .col-2 input[type="text"],
 .content .content .main.product .col-2 input[type="text"],
+.content .content .main.order .col-2 input[type="number"],
+.content .content .main.profile .col-2 input[type="number"],
+.content .content .main.product .col-2 input[type="number"],
 .content .content .main.order .col-2 select,
 .content .content .main.profile .col-2 select,
 .content .content .main.product .col-2 select,
