--- a/src/client/admin/modules/products/components/product-list/product-list.component.html
+++ b/src/client/admin/modules/products/components/product-list/product-list.component.html
@@ -5,7 +5,6 @@
     <div class="cf">
       <button class="add-product fr" routerLink="new">Create Product</button>
     </div>
-    <data-table></data-table>
-    <div *ngFor="let product of products | async">{{product | json}}</div>
+    <data-table [data]="products | async" [columns]="columns" (select)="onSelect($event)"></data-table>
   </div>
 </div>
