--- a/src/client/app/components/header/header.component.html
+++ b/src/client/app/components/header/header.component.html
@@ -2,15 +2,15 @@
   <div class="container cf"><a routerLink="/" class="logo fl"></a>
     <div class="menu fr">
       <ul class="fl">
-        <li><a routerLink="/">Home</a></li>
-        <li><a routerLink="/products">Products</a></li>
-        <li><a routerLink="/orders">Orders</a></li>
-        <li><a routerLink="/reports">Reports</a></li>
-        <li><a routerLink="/news">News blog</a></li>
-        <li><a routerLink="/page/faq">FAQ</a></li>
-        <li><a routerLink="/profile">Profile</a></li>
-        <li><a routerLink="/page/contact">Contact</a></li>
-        <li><a routerLink="/page/manual">Manual</a></li>
+        <li><a [routerLink]="['/']">Home</a></li>
+        <li><a [routerLink]="['/products']">Products</a></li>
+        <li><a [routerLink]="['/order']">Orders</a></li>
+        <li><a [routerLink]="['/reports']">Reports</a></li>
+        <li><a [routerLink]="['/news']">News blog</a></li>
+        <li><a [routerLink]="['/page/faq']">FAQ</a></li>
+        <li><a [routerLink]="['/profile']">Profile</a></li>
+        <li><a [routerLink]="['/page/contact']">Contact</a></li>
+        <li><a [routerLink]="['/page/manual']">Manual</a></li>
       </ul>
     </div>
   </div>
