--- a/src/client/shared/components/data-table/data-table.component.html
+++ b/src/client/shared/components/data-table/data-table.component.html
@@ -1,8 +1,8 @@
 <table class="report-table">
   <tr>
-    <th *ngFor="let col of columns">{{col.title}}</th>
+    <th *ngFor="let col of columns" (click)="sort(col.key)" [class.up]="isSortingActive(col.key, 'DESC')" [class.down]="isSortingActive(col.key, 'ASC')">{{col.title}}</th>
   </tr>
   <tr *ngFor="let item of data" (click)="onSelect(item)">
-    <td *ngFor="let col of columns">{{getValue(item, col.key)}}</td>
+    <td *ngFor="let col of columns">{{getValue(item, col.key, col.filter)}}</td>
   </tr>
 </table>
