Auth module, header, order details

--- a/src/client/admin/modules/reports/components/reports/reports.component.html
+++ b/src/client/admin/modules/reports/components/reports/reports.component.html
@@ -4,7 +4,7 @@
     <h1>Reports</h1>
     <div class="report cf">
       <reports-parameters [(ngModel)]="params" (generate)="update()"></reports-parameters>
-      <data-table [data]="orders" [columns]="columns" [(params)]="params" (select)="onSelect($event)"></data-table>
+      <data-table [data]="orders" [columns]="columns" [(params)]="params" (paramsChange)="update()" (select)="onSelect($event)"></data-table>
     </div>
   </div>
 </div>
