BE aggregation, Finance module

--- a/src/client/admin/modules/orders/components/order/order.component.html
+++ b/src/client/admin/modules/orders/components/order/order.component.html
@@ -12,11 +12,11 @@
         <div class="col-1 fl">
           <div class="input-group cf">
             <label class="fl">Partner ID</label>
-            <!--<span class="fl">{{order.user._id}}</span>-->
+            <span class="fl">{{order.user._id}}</span>
           </div>
           <div class="input-group cf">
             <label class="fl">Nick Name</label>
-            <!--<span class="fl">{{order.user.nickname}}</span>-->
+            <span class="fl">{{order.user.nickname}}</span>
           </div>
           <div class="input-group cf">
             <label class="fl">First Name</label>
