--- a/src/client/app/modules/orders/components/order/order.component.html
+++ b/src/client/app/modules/orders/components/order/order.component.html
@@ -1,15 +1,15 @@
 <div class="container content">
   <div class="breadcrumbs"><a [routerLink]="['/']">Home</a><span>Order</span></div>
-  <!--<finance></finance>-->
+  <finance></finance>
   <div class="content">
     <h1>Order</h1>
     <div class="main order cf">
       <div class="col-1 fl">
         <div class="input-group cf">
-          <label class="fl">Partner ID</label><!--<span class="fl">{{order.user._id}}</span>-->
+          <label class="fl">Partner ID</label><span class="fl">{{order.user._id}}</span>
         </div>
         <div class="input-group cf">
-          <label class="fl">Nick Name</label><!--<span class="fl">{{order.user.nickname}}</span>-->
+          <label class="fl">Nick Name</label><span class="fl">{{order.user.nickname}}</span>
         </div>
         <div class="input-group cf">
           <label class="fl">First Name</label><span class="fl">{{order.customer.firstName}}</span>
