--- a/src/client/app/modules/products/components/products-list/products-list.component.html
+++ b/src/client/app/modules/products/components/products-list/products-list.component.html
@@ -1,7 +1,7 @@
 <div class="container content">
   <div class="breadcrumbs"><a routerLink="/">Home</a>
     <!--<a [routerLink]="['Products']" *ngIf="category._id">Products</a>--><span>{{'Products'}}</span></div>
-  <!--<finance></finance>-->
+  <finance></finance>
   <div class="content">
     <h1>{{'Products'}}</h1>
     <div class="products">
@@ -11,7 +11,7 @@
             <img [src]="product.image"/>
             <div class="status">{{product.details.category}}</div>
             <h1>{{product.title}}</h1>
-            <div class="category">{{product.category}}</div>
+            <div class="category" *ngIf="product.category">{{product.category.name}}</div>
             <button>more</button>
           </a>
         </div>
