--- a/src/client/app/modules/user/components/profile/profile.component.html
+++ b/src/client/app/modules/user/components/profile/profile.component.html
@@ -1,6 +1,6 @@
 <div class="container content">
   <div class="breadcrumbs"><a href="">Home</a><span>Profile</span></div>
-  <!--<finance></finance>-->
+  <finance></finance>
   <div class="content">
     <h1>Profile</h1>
     <div class="main profile">
