--- a/src/client/admin/components/header/header.component.html
+++ b/src/client/admin/components/header/header.component.html
@@ -11,7 +11,7 @@
       </ul>
     </div>
     <div class="profile fl">
-      <div class="block fl"><a href="#">Log out</a>
+      <div class="block fl"><a (click)="logout($event)" href="#">Log out</a>
         <div class="id">My ID:</div>
       </div>
       <div class="block fl"><a href="">admin</a>
